# oxigent

./: .gitignore  AGENTS.md  Cargo.toml  flake.nix  opencode.json  package.json  pnpm-lock.yaml
.opencode/agents/: agent_glm.md  agent_gpt.md
.opencode/instructions/agent/: orchestrate.md  workflow.md
.opencode/plugins/: agents-guard.ts
apps/desktop/: package.json  vite.config.ts
apps/desktop/src/: app.ts  main.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/: index.html  package.json  tsconfig.json
apps/web/src/: app.ts
backend/crates/agent-execution/: Cargo.toml
backend/crates/api/: Cargo.toml
backend/crates/api/src/: config.rs  deny_list.rs  error.rs  lib.rs  state.rs
backend/crates/api/src/jwt/: claims.rs  mod.rs
backend/crates/api/src/middleware/: auth.rs
backend/crates/api/src/routes/: auth.rs
backend/crates/identity-access/: Cargo.toml
backend/crates/integrations/: Cargo.toml
backend/crates/planning/: Cargo.toml
backend/crates/shared-kernel/: Cargo.toml
backend/crates/shared-kernel/src/: criteria.rs  errors.rs  lib.rs  prelude.rs
backend/crates/work-management/: Cargo.toml
backend/crates/work-management/src/domain/: task.rs
docs/: roadmap.md
docs/adr/: ADR-001-general-architecture.md  ADR-002-bounded-contexts.md  ADR-003-technology-stack.md  ADR-004-data-technology.md  ADR-005-offline-sync-strategy.md  ADR-006-frontend-architecture.md  ADR-007-frontend-backend-api-contract.md  ADR-008-monorepo-dev-environment.md  ADR-009-error-handling.md  ADR-010-api-versioning-compatibility.md  ADR-011-criteria-query-model.md  ADR-012-port-naming-conventions.md
docs/architecture/: overview.md
docs/postmortems/: 2026-04-02-auth-login-jwt.md  2026-04-02-task-7-auth-routes.md
docs/superpowers/plans/: 2026-04-02-identity-access-scaffold.md
docs/superpowers/postmortems/: 2026-04-02-auth-login-jwt.md
docs/superpowers/specs/: 2026-04-02-auth-login-jwt-design.md
docs/workflows/: conventions.md  development-flow.md  onboarding.md
(+19 files in other folders)
