[package]
name = "rust-kanban-desktop"
version.workspace = true
edition.workspace = true

[dependencies]
shared-kernel = { path = "../../../backend/crates/shared-kernel" }
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }
