[package]
name = "work-management"
version.workspace = true
edition.workspace = true

[dependencies]
shared-kernel = { path = "../shared-kernel" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
